--- a/src/templates/core/profile.html
+++ b/src/templates/core/profile.html
@@ -77,20 +77,29 @@
                   <div class="download-menu-header">
                     <i class="fa fa-download"></i> Download
                   </div>
+                  <!-- 200px -->
                   <div class="download-menu-group">
-                    <div class="download-menu-label">200px:</div>
-                    <button class="menu-option"><i class="fa fa-file-image-o"></i> PNG</button>
-                    <button class="menu-option"><i class="fa fa-file-image-o"></i> JPEG</button>
+                    <span class="download-menu-label">200px:</span>
+                    <div class="download-menu-options-row">
+                      <button class="menu-option"><i class="fa fa-file-image-o"></i> PNG</button>
+                      <button class="menu-option"><i class="fa fa-file-image-o"></i> JPEG</button>
+                    </div>
                   </div>
+                  <!-- 400px -->
                   <div class="download-menu-group">
-                    <div class="download-menu-label">400px:</div>
-                    <button class="menu-option"><i class="fa fa-file-image-o"></i> PNG</button>
-                    <button class="menu-option"><i class="fa fa-file-image-o"></i> JPEG</button>
+                    <span class="download-menu-label">400px:</span>
+                    <div class="download-menu-options-row">
+                      <button class="menu-option"><i class="fa fa-file-image-o"></i> PNG</button>
+                      <button class="menu-option"><i class="fa fa-file-image-o"></i> JPEG</button>
+                    </div>
                   </div>
+                  <!-- Original -->
                   <div class="download-menu-group">
-                    <div class="download-menu-label">Original:</div>
-                    <button class="menu-option"><i class="fa fa-file-image-o"></i> PNG</button>
-                    <button class="menu-option"><i class="fa fa-file-image-o"></i> JPEG</button>
+                    <span class="download-menu-label">Original:</span>
+                    <div class="download-menu-options-row">
+                      <button class="menu-option"><i class="fa fa-file-image-o"></i> PNG</button>
+                      <button class="menu-option"><i class="fa fa-file-image-o"></i> JPEG</button>
+                    </div>
                   </div>
                 </div>
               </div>
